{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 14,
  "lineage": "77da9b4b-d6ba-1da5-2be3-b72952468e95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:security-group/sg-08592b4dde9a79389",
            "description": "Security group with no ingress rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08592b4dde9a79389",
            "ingress": [],
            "name": "no-ingress-sg",
            "name_prefix": "",
            "owner_id": "654654365352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:network-acl/acl-0a4d15766756ae0d4",
            "default_network_acl_id": "acl-0a4d15766756ae0d4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a4d15766756ae0d4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654365352",
            "subnet_ids": [
              "subnet-00731173fd36028e5",
              "subnet-0de6621628aa09c7f"
            ],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:route-table/rtb-0321497397698e180",
            "default_route_table_id": "rtb-0321497397698e180",
            "id": "rtb-0321497397698e180",
            "owner_id": "654654365352",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:security-group/sg-0e8db91e1720146c6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e8db91e1720146c6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654365352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:internet-gateway/igw-00de78734ae4e856f",
            "id": "igw-00de78734ae4e856f",
            "owner_id": "654654365352",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00de78734ae4e856f",
            "id": "r-rtb-05df44558be8f5a361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05df44558be8f5a36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.this",
            "module.main.aws_route_table.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:route-table/rtb-05df44558be8f5a36",
            "id": "rtb-05df44558be8f5a36",
            "owner_id": "654654365352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00de78734ae4e856f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b91199172099bed7",
            "route_table_id": "rtb-05df44558be8f5a36",
            "subnet_id": "subnet-00731173fd36028e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034cc8efb8ec60c1a",
            "route_table_id": "rtb-05df44558be8f5a36",
            "subnet_id": "subnet-0de6621628aa09c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:subnet/subnet-00731173fd36028e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00731173fd36028e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654365352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public-1"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:subnet/subnet-0de6621628aa09c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6621628aa09c7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654365352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public-2"
            },
            "vpc_id": "vpc-0742d361d0cbb719b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654365352:vpc/vpc-0742d361d0cbb719b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0a4d15766756ae0d4",
            "default_route_table_id": "rtb-0321497397698e180",
            "default_security_group_id": "sg-0e8db91e1720146c6",
            "dhcp_options_id": "dopt-01a2f25cbbd17cb91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0742d361d0cbb719b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0321497397698e180",
            "owner_id": "654654365352",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev"
            }
          }
        }
      ]
    }
  ]
}